--- a/TODOPROJECT/templates/list.html
+++ b/TODOPROJECT/templates/list.html
@@ -10,14 +10,15 @@
 {% endblock header %}
 
 {% block content %}
+<div class='container'>
+    <a href="{% url 'create' %}" class="btn btn-info active" role="button" aria-pressed="true">新規作成</a>
     {% for item in object_list %}
-        <div class='container'>
-            <div class="alert alert-{{ item.priority }}" role="alert">
-                <p>{{ item.title }}</p>
-                <a href="{% url 'update' item.pk %}" class="btn btn-info active" role="button" aria-pressed="true">編集</a>
-                <a href="{% url 'delete' item.pk %}" class="btn btn-primary active" role="button" aria-pressed="true">削除</a>
-                <a href="{% url 'detail' item.pk %}" class="btn btn-success active" role="button" aria-pressed="true">詳細</a>
-            </div>
+        <div class="alert alert-{{ item.priority }}" role="alert">
+            <p>{{ item.title }}　期日:{{ item.duedate }}</p>
+            <a href="{% url 'update' item.pk %}" class="btn btn-info active" role="button" aria-pressed="true">編集</a>
+            <a href="{% url 'delete' item.pk %}" class="btn btn-primary active" role="button" aria-pressed="true">削除</a>
+            <a href="{% url 'detail' item.pk %}" class="btn btn-success active" role="button" aria-pressed="true">詳細</a>
         </div>
     {% endfor%}
+</div>
 {% endblock content %}
